Added a predictor file to execute from terminal

--- a/Notebooks/Instructions_for_loading_model.ipynb
+++ b/Notebooks/Instructions_for_loading_model.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow import keras\n",
-    "import PIL\n",
+    "\n",
     "from PIL import Image\n",
-    "from matplotlib import image\n",
+    "#from matplotlib import image\n",
     "import numpy as np"
    ]
   },
@@ -22,11 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loaded_model = keras.models.load_model('binary') #Path to the file with all model information in it"
+    "loaded_model = keras.models.load_model('../binary') #Path to the file with all model information in it"
    ]
   },
   {
@@ -38,16 +38,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xray = Image.open('readme_images/no_finding.png')"
+    "xray = Image.open('../readme_images/no_finding.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "(1024, 1024)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "(224, 224)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "(224, 224, 3)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1104,23 +1104,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.06051174]], dtype=float32)"
+       "0.060511738"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loaded_model.predict(test)"
+    "loaded_model.predict(test)[0][0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
